HTML & CSS Corona website

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             </div>
             <br/>
             <div id="text">
-                    <img src="CoronaPic1.jpg" width="430" height="260">
-                    <img src="CoronaPic2.jpg" width="430" height="260">
+                    <img src="photos/CoronaPic1.jpg" width="430" height="260">
+                    <img src="photos/CoronaPic2.jpg" width="430" height="260">
                     <br/>
-                    <img src="CoronaPic3.jpg" width="430" height="260">
-                    <img src="CoronaPic4.jpg" width="430" height="260">
+                    <img src="photos/CoronaPic3.jpg" width="430" height="260">
+                    <img src="photos/CoronaPic4.jpg" width="430" height="260">
                     <br/><br/>
                 </div> 
             </section>
@@ -118,7 +118,7 @@
             <div id="title">
                 contact me </br></br>
                 <div id= "text">
-                <form action="mail.php" method="POST">
+                <form action="PHP/mail.php" method="POST">
                     <label class="con"> Enter your firstname : </label>
                     <input type="text" name="firstname"/>
                     <br>
