--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                 <br>
                 drug-side effects
                 which based on more than milliards user posts.<br><br>
+                In order to search with Web1 about drug side effects you will have to search the spesific word as in the site</br>
+                In Web2 - you will have the option to search in Blogs/Wikis or find it in the search if it's in XML etc. </br>
+                In Web3 - you will have the option to search part of the name of the drug or something that related to this drug and you will find it </br></br>
             </div>
             </section>
             <br><br>
